# pre-commit-hooks

./: .copier-answers-py.yaml  .coveragerc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prekignore  AGENTS.md  dprint.json  hatch.toml  mise.toml  noxfile.py  prek.toml  pyproject.toml  readme.md  ruff.toml
.github/workflows/: nox.yaml
mise/: config.toml
mise/tasks/: bootstrap
requirements/: base.in  base.txt  dev.in  dev.txt
specs/: 2026-05-09-support-prek-toml.md  2026-05-09-support-prek-toml.review-opus.md
src/pre_commit_hooks/: check_ruff_versions.py  version.py
src/tests/: test_check_ruff_versions.py
src/tests/check-ruff-versions-diff/: .pre-commit-config.yaml
src/tests/check-ruff-versions-diff/requirements/: dev.txt
src/tests/check-ruff-versions-missing/: .pre-commit-config.yaml
src/tests/check-ruff-versions-missing/requirements/: dev.txt
src/tests/check-ruff-versions-pkg-in-sub-dir/: .pre-commit-config.yaml
src/tests/check-ruff-versions-uv-diff/: .pre-commit-config.yaml
src/tests/check-ruff-versions-uv-lock-missing/: .pre-commit-config.yaml
tasks/: bootstrap  bump
tests/: test_check_ruff_versions.py
tests/check-ruff-versions-diff/: .pre-commit-config.yaml
tests/check-ruff-versions-same/requirements/: dev.txt
tests/pre_commit_hooks_tests/: test_check_ruff_versions.py
tests/pre_commit_hooks_tests/check-ruff-versions-pkg-in-sub-dir/some-pkg/requirements/: dev.txt
tests/pre_commit_hooks_tests/check-ruff-versions-prek-missing/: prek.toml
tests/pre_commit_hooks_tests/check-ruff-versions-prek-precedence/: .pre-commit-config.yaml  prek.toml
tests/pre_commit_hooks_tests/check-ruff-versions-prek-same/: prek.toml
tests/pre_commit_hooks_tests/check-ruff-versions-prek-toml-1-1/: prek.toml
tests/pre_commit_hooks_tests/check-ruff-versions-uv-diff/: pyproject.toml
tests/pre_commit_hooks_tests/check-ruff-versions-uv-lock-missing/: pyproject.toml
