[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'pre-commit-hooks'
authors = [
    {name = 'Randy Syring', email = 'randy.syring@level12.io'},
]
requires-python = '~=3.12.0'
dynamic = ['version']
readme = 'readme.md'
dependencies = [
    "click>=8.1.8",
    "pip-requirements-parser>=32.0.1",
    "pyyaml>=6.0.2",
]



[project.scripts]
'check-ruff-versions' = 'pre_commit_hooks.check_ruff_versions:main'


[dependency-groups]
# Note: keeping Coppy deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to the latest Coppy template.
dev = [
    # From Coppy:
    {include-group = "pytest"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',

    # App specific:
    # TODO: fill in app deps here
]
# Used by nox
pytest = [
    # From Coppy:
    'pytest',
    'pytest-cov',

    # App specific:
    # TODO: fill in app deps here
    {include-group = "pre-commit"},
]
# Used by nox
pre-commit = [
    # From Coppy:
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    # From Coppy:
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
