[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'pre-commit-hooks'
authors = [
    {name = 'Randy Syring', email = 'randy.syring@level12.io'},
]
requires-python = '>=3.12.0'
dynamic = ['version']
readme = 'readme.md'
dependencies = [
    "click>=8.1.8",
    "pip-requirements-parser>=32.0.1",
    "pyyaml>=6.0.2",
]



[project.scripts]
'check-ruff-versions' = 'pre_commit_hooks.check_ruff_versions:main'


[dependency-groups]
dev = [
    {include-group = "pytest"},
    {include-group = "prek"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',
]
# Used by nox
pytest = [
    'pytest',
    'pytest-cov',
]
# Used by nox
prek = [
    'prek',
]
# Used by nox
audit = [
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
