[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'pre-commit-hooks'
authors = [
    {name = 'Randy Syring', email = 'randy.syring@level12.io'},
]
requires-python = '>=3.12.0'
dynamic = ['version']
readme = 'readme.md'
dependencies = [
    "click>=8.1.8",
    "pip-requirements-parser>=32.0.1",
    "pyyaml>=6.0.2",
    # Only required until tomlkit makes a release with 1.1 support:
    # https://github.com/python-poetry/tomlkit/issues/465
    "tomlkit @ https://github.com/python-poetry/tomlkit/archive/7f237d8f5d07d23422571e9daaf411f4a2356855.tar.gz",
]



[project.scripts]
'check-ruff-versions' = 'pre_commit_hooks.check_ruff_versions:main'


[dependency-groups]
dev = [
    {include-group = "pytest"},
    {include-group = "prek"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    'hatch',
    'ruff',
]
# Used by nox
pytest = [
    'pytest',
    'pytest-cov',
]
# Used by nox
prek = [
    'prek',
]
# Used by nox
audit = [
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
